--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.7.2
+bidict==0.23.1
 contourpy==1.3.0
 cycler==0.12.1
 Django==4.2.7
 fonttools==4.56.0
+h11==0.16.0
 importlib_resources==6.5.2
 joblib==1.4.2
 kiwisolver==1.4.7
 matplotlib==3.9.4
-mysqlclient==2.2.0
+netifaces==0.10.6
+networkx==3.5
 numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
@@ -15,12 +18,17 @@ pillow==11.1.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-engineio==4.12.2
+python-socketio==5.13.0
 pytz==2025.2
 scikit-learn==1.6.1
 scipy==1.13.1
+setuptools==3.3
+simple-websocket==1.1.0
 six==1.17.0
 sqlparse==0.5.0
 threadpoolctl==3.6.0
 typing_extensions==4.8.0
 tzdata==2025.2
+wsproto==1.2.0
 zipp==3.21.0
